--- a/public/output.css
+++ b/public/output.css
@@ -492,9 +492,60 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.absolute{
+  position: absolute;
+}
+.relative{
+  position: relative;
+}
+.bottom-0{
+  bottom: 0px;
+}
+.left-0{
+  left: 0px;
+}
+.right-0{
+  right: 0px;
+}
+.left-5{
+  left: 1.25rem;
+}
+.top-0{
+  top: 0px;
+}
+.-left-0{
+  left: -0px;
+}
+.-left-5{
+  left: -1.25rem;
+}
+.-left-6{
+  left: -1.5rem;
+}
+.-left-7{
+  left: -1.75rem;
+}
+.-left-10{
+  left: -2.5rem;
+}
+.-left-14{
+  left: -3.5rem;
+}
+.-left-12{
+  left: -3rem;
+}
+.top-1{
+  top: 0.25rem;
+}
+.top-2{
+  top: 0.5rem;
+}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+.ml-1{
+  margin-left: 0.25rem;
 }
 .ml-12{
   margin-left: 3rem;
@@ -508,11 +559,38 @@ video {
 .flex{
   display: flex;
 }
-.max-w-screen-xl{
-  max-width: 1280px;
+.h-6{
+  height: 1.5rem;
+}
+.h-8{
+  height: 2rem;
+}
+.h-1{
+  height: 0.25rem;
+}
+.h-0{
+  height: 0px;
+}
+.h-4{
+  height: 1rem;
+}
+.w-6{
+  width: 1.5rem;
+}
+.w-8{
+  width: 2rem;
+}
+.w-full{
+  width: 100%;
 }
 .max-w-screen-2xl{
   max-width: 1536px;
+}
+.max-w-screen-xl{
+  max-width: 1280px;
+}
+.items-center{
+  align-items: center;
 }
 .justify-between{
   justify-content: space-between;
@@ -531,41 +609,79 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(252 247 230 / var(--tw-bg-opacity));
 }
-.p-3{
-  padding: 0.75rem;
+.stroke-sand{
+  stroke: #fcf7e6;
 }
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.p-24{
+  padding: 6rem;
+}
+.p-6{
+  padding: 1.5rem;
+}
+.p-0{
+  padding: 0px;
+}
+.p-0\.5{
+  padding: 0.125rem;
 }
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.font-main{
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.pl-16{
+  padding-left: 4rem;
+}
+.pr-32{
+  padding-right: 8rem;
+}
+.pt-24{
+  padding-top: 6rem;
+}
+.pt-0{
+  padding-top: 0px;
+}
+.pt-0\.5{
+  padding-top: 0.125rem;
+}
+.font-space-grotesk{
   font-family: Space Grotesk;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-9xl{
+  font-size: 8rem;
+  line-height: 1;
 }
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.font-semibold{
-  font-weight: 600;
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-bold{
   font-weight: 700;
+}
+.font-extrabold{
+  font-weight: 800;
+}
+.uppercase{
+  text-transform: uppercase;
+}
+.text-sand{
+  --tw-text-opacity: 1;
+  color: rgb(252 247 230 / var(--tw-text-opacity));
 }
 .text-white{
   --tw-text-opacity: 1;
