--- a/public/output.css
+++ b/public/output.css
@@ -508,27 +508,17 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.my-12{
-  margin-top: 3rem;
+.mb-12{
   margin-bottom: 3rem;
+}
+.mb-16{
+  margin-bottom: 4rem;
 }
 .ml-1{
   margin-left: 0.25rem;
 }
 .ml-12{
   margin-left: 3rem;
-}
-.mb-7{
-  margin-bottom: 1.75rem;
-}
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-.mb-16{
-  margin-bottom: 4rem;
-}
-.mb-12{
-  margin-bottom: 3rem;
 }
 .block{
   display: block;
@@ -572,6 +562,13 @@ video {
 .justify-between{
   justify-content: space-between;
 }
+.gap-x-6{
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gap-y-12{
+  row-gap: 3rem;
+}
 .rounded{
   border-radius: 0.25rem;
 }
@@ -608,15 +605,6 @@ video {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
-.pt-12{
-  padding-top: 3rem;
-}
-.pb-12{
-  padding-bottom: 3rem;
-}
-.pt-24{
-  padding-top: 6rem;
-}
 .font-space-grotesk{
   font-family: Space Grotesk;
 }
@@ -627,6 +615,10 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .font-bold{
   font-weight: 700;
@@ -660,3 +652,21 @@ video {
   line-height: 1.75rem;
   font-weight: 300;
 }
+
+.card-image{
+  margin-bottom: 0.75rem;
+}
+
+.card-details{
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.card-condition-info{
+  text-align: right;
+}
+
+.card-condition{
+  font-weight: 500;
+}
+
