--- a/public/output.css
+++ b/public/output.css
@@ -532,17 +532,14 @@ video {
 .mb-16{
   margin-bottom: 4rem;
 }
+.mb-6{
+  margin-bottom: 1.5rem;
+}
 .ml-1{
   margin-left: 0.25rem;
 }
 .ml-12{
   margin-left: 3rem;
-}
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-.mb-6{
-  margin-bottom: 1.5rem;
 }
 .block{
   display: block;
@@ -613,13 +610,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
-.bg-sand{
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 247 230 / var(--tw-bg-opacity));
-}
 .bg-dark{
   --tw-bg-opacity: 1;
   background-color: rgb(30 30 30 / var(--tw-bg-opacity));
+}
+.bg-sand{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 247 230 / var(--tw-bg-opacity));
 }
 .stroke-sand{
   stroke: #fcf7e6;
@@ -649,6 +646,10 @@ video {
 .font-space-grotesk{
   font-family: Space Grotesk;
 }
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -660,10 +661,6 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 .font-bold{
   font-weight: 700;
@@ -721,6 +718,7 @@ video {
 }
 
 .card-details{
+  margin-bottom: 0.75rem;
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -731,5 +729,17 @@ video {
 
 .card-condition{
   font-weight: 500;
+}
+
+.card-button{
+  width: 100%;
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  padding: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
