--- a/public/output.css
+++ b/public/output.css
@@ -709,6 +709,21 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.cart-product{
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart-left-side{
+  display: flex;
+}
+
+.cart-image{
+  margin-right: 1rem;
+  height: 74px;
+  width: 74px;
+}
+
 .card-image{
   margin-bottom: 0.75rem;
   border-radius: 0.25rem;
