--- a/public/output.css
+++ b/public/output.css
@@ -538,14 +538,14 @@ video {
 .mb-6{
   margin-bottom: 1.5rem;
 }
+.mb-9{
+  margin-bottom: 2.25rem;
+}
 .ml-1{
   margin-left: 0.25rem;
 }
 .ml-12{
   margin-left: 3rem;
-}
-.mb-9{
-  margin-bottom: 2.25rem;
 }
 .block{
   display: block;
@@ -559,6 +559,9 @@ video {
 .grid{
   display: grid;
 }
+.h-20{
+  height: 5rem;
+}
 .h-6{
   height: 1.5rem;
 }
@@ -567,6 +570,9 @@ video {
 }
 .h-full{
   height: 100%;
+}
+.w-20{
+  width: 5rem;
 }
 .w-6{
   width: 1.5rem;
@@ -624,6 +630,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(252 247 230 / var(--tw-bg-opacity));
 }
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 .stroke-sand{
   stroke: #fcf7e6;
 }
@@ -632,6 +642,10 @@ video {
 }
 .p-6{
   padding: 1.5rem;
+}
+.px-28{
+  padding-left: 7rem;
+  padding-right: 7rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -644,6 +658,10 @@ video {
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .py-24{
   padding-top: 6rem;
@@ -768,5 +786,31 @@ video {
   text-transform: uppercase;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.card-button:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 136 136 / var(--tw-bg-opacity));
+}
+
+.footer-link{
+  font-weight: 700;
+  text-transform: uppercase;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.footer-link:hover{
+  --tw-text-opacity: 1;
+  color: rgb(136 136 136 / var(--tw-text-opacity));
+}
+
+.hover\:bg-gray-light:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 136 136 / var(--tw-bg-opacity));
 }
 
