--- a/public/output.css
+++ b/public/output.css
@@ -492,6 +492,9 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.static{
+  position: static;
+}
 .fixed{
   position: fixed;
 }
@@ -513,18 +516,30 @@ video {
 .top-0{
   top: 0px;
 }
-.top-2{
-  top: 0.5rem;
-}
 .top-full{
   top: 100%;
 }
 .z-50{
   z-index: 50;
 }
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+.order-1{
+  order: 1;
+}
+.-order-1{
+  order: -1;
+}
+.order-2{
+  order: 2;
+}
+.order-3{
+  order: 3;
+}
+.order-last{
+  order: 9999;
+}
+.mx-6{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 .mb-12{
   margin-bottom: 3rem;
@@ -586,11 +601,14 @@ video {
 .w-full{
   width: 100%;
 }
-.max-w-screen-xl{
-  max-width: 1280px;
-}
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.flex-col{
+  flex-direction: column;
 }
 .items-center{
   align-items: center;
@@ -640,12 +658,11 @@ video {
 .p-11{
   padding: 2.75rem;
 }
+.p-12{
+  padding: 3rem;
+}
 .p-6{
   padding: 1.5rem;
-}
-.px-28{
-  padding-left: 7rem;
-  padding-right: 7rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -659,10 +676,6 @@ video {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -674,10 +687,6 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -688,9 +697,6 @@ video {
 }
 .font-bold{
   font-weight: 700;
-}
-.font-extrabold{
-  font-weight: 800;
 }
 .uppercase{
   text-transform: uppercase;
@@ -796,6 +802,17 @@ video {
   background-color: rgb(136 136 136 / var(--tw-bg-opacity));
 }
 
+.footer-list{
+  margin-bottom: 3rem;
+}
+
+@media (min-width: 1024px){
+
+  .footer-list{
+    margin-bottom: 0px;
+  }
+}
+
 .footer-link{
   font-weight: 700;
   text-transform: uppercase;
@@ -812,5 +829,85 @@ video {
 .hover\:bg-gray-light:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(136 136 136 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 640px){
+
+  .sm\:order-1{
+    order: 1;
+  }
+
+  .sm\:order-first{
+    order: -9999;
+  }
+
+  .sm\:flex{
+    display: flex;
+  }
+
+  .sm\:grid{
+    display: grid;
+  }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:justify-start{
+    justify-content: flex-start;
+  }
+}
+
+@media (min-width: 1024px){
+
+  .lg\:mb-0{
+    margin-bottom: 0px;
+  }
+
+  .lg\:grid{
+    display: grid;
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1280px){
+
+  .xl\:px-28{
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .xl\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+}
+
+@media (min-width: 1536px){
+
+  .\32xl\:relative{
+    position: relative;
+  }
+
+  .\32xl\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\32xl\:max-w-screen-xl{
+    max-width: 1280px;
+  }
+
+  .\32xl\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
