--- a/public/output.css
+++ b/public/output.css
@@ -562,6 +562,9 @@ video {
 .ml-12{
   margin-left: 3rem;
 }
+.ml-4{
+  margin-left: 1rem;
+}
 .block{
   display: block;
 }
@@ -586,6 +589,18 @@ video {
 .h-full{
   height: 100%;
 }
+.h-12{
+  height: 3rem;
+}
+.h-1{
+  height: 0.25rem;
+}
+.h-16{
+  height: 4rem;
+}
+.h-14{
+  height: 3.5rem;
+}
 .w-20{
   width: 5rem;
 }
@@ -600,6 +615,12 @@ video {
 }
 .w-full{
   width: 100%;
+}
+.w-28{
+  width: 7rem;
+}
+.w-32{
+  width: 8rem;
 }
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -680,6 +701,27 @@ video {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.py-0{
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.pt-12{
+  padding-top: 3rem;
+}
+.pt-6{
+  padding-top: 1.5rem;
+}
+.pb-12{
+  padding-bottom: 3rem;
+}
 .font-space-grotesk{
   font-family: Space Grotesk;
 }
@@ -694,6 +736,14 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .font-bold{
   font-weight: 700;
@@ -858,6 +908,55 @@ video {
   }
 }
 
+@media (min-width: 768px){
+
+  .md\:ml-12{
+    margin-left: 3rem;
+  }
+
+  .md\:block{
+    display: block;
+  }
+
+  .md\:h-auto{
+    height: auto;
+  }
+
+  .md\:w-auto{
+    width: auto;
+  }
+
+  .md\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .md\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .md\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .md\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 @media (min-width: 1024px){
 
   .lg\:mb-0{
@@ -875,6 +974,11 @@ video {
   .lg\:justify-center{
     justify-content: center;
   }
+
+  .lg\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
 }
 
 @media (min-width: 1280px){
@@ -887,6 +991,11 @@ video {
   .xl\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+
+  .xl\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 }
 
