beta-info responsive

--- a/public/output.css
+++ b/public/output.css
@@ -565,6 +565,9 @@ video {
 .ml-4{
   margin-left: 1rem;
 }
+.ml-6{
+  margin-left: 1.5rem;
+}
 .block{
   display: block;
 }
@@ -576,6 +579,9 @@ video {
 }
 .grid{
   display: grid;
+}
+.hidden{
+  display: none;
 }
 .h-20{
   height: 5rem;
@@ -621,6 +627,18 @@ video {
 }
 .w-32{
   width: 8rem;
+}
+.w-0{
+  width: 0px;
+}
+.max-w-\[\]{
+  max-width: ;
+}
+.max-w-\[445px\]{
+  max-width: 445px;
+}
+.max-w-\[450px\]{
+  max-width: 450px;
 }
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -899,6 +917,10 @@ video {
     display: grid;
   }
 
+  .sm\:w-\[445px\]{
+    width: 445px;
+  }
+
   .sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -918,12 +940,20 @@ video {
     display: block;
   }
 
+  .md\:hidden{
+    display: none;
+  }
+
   .md\:h-auto{
     height: auto;
   }
 
   .md\:w-auto{
     width: auto;
+  }
+
+  .md\:w-\[445px\]{
+    width: 445px;
   }
 
   .md\:px-3{
